--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ a {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../fonts/cuprum.woff2) format("woff2");
+  src: url(../fonts/cuprum.woff2) format("woff2"),
+   url(../fonts/cuprum.woff) format("woff");
 }
 
 @font-face {
@@ -25,7 +26,8 @@ a {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(../fonts/cuprumbold.woff2) format("woff2");
+  src: url(../fonts/cuprumbold.woff2) format("woff2"),
+   url(../fonts/cuprumbold.woff) format("woff");
 }
 
 @font-face {
@@ -33,7 +35,8 @@ a {
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(../fonts/cuprumitalic.woff2) format("woff2");
+  src: url(../fonts/cuprumitalic.woff2) format("woff2"),
+   url(../fonts/cuprumitalic.woff) format("woff");
 }
 
 @font-face {
@@ -41,7 +44,8 @@ a {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../fonts/ptsans.woff2) format("woff2");
+  src: url(../fonts/ptsans.woff2) format("woff2"),
+   url(../fonts/ptsans.woff) format("woff");
 }
 
 @font-face {
@@ -49,7 +53,8 @@ a {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(../fonts/ptsansbold.woff2) format("woff2");
+  src: url(../fonts/ptsansbold.woff2) format("woff2"),
+   url(../fonts/ptsansbold.woff) format("woff");
 }
 
 .visually-hidden {
