--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a {
   font-weight: 400;
   font-display: swap;
   src: url(../fonts/cuprum.woff2) format("woff2"),
-   url(../fonts/cuprum.woff) format("woff");
+    url(../fonts/cuprum.woff) format("woff");
 }
 
 @font-face {
@@ -27,7 +27,7 @@ a {
   font-weight: 700;
   font-display: swap;
   src: url(../fonts/cuprumbold.woff2) format("woff2"),
-   url(../fonts/cuprumbold.woff) format("woff");
+    url(../fonts/cuprumbold.woff) format("woff");
 }
 
 @font-face {
@@ -36,7 +36,7 @@ a {
   font-weight: 400;
   font-display: swap;
   src: url(../fonts/cuprumitalic.woff2) format("woff2"),
-   url(../fonts/cuprumitalic.woff) format("woff");
+    url(../fonts/cuprumitalic.woff) format("woff");
 }
 
 @font-face {
@@ -45,7 +45,7 @@ a {
   font-weight: 400;
   font-display: swap;
   src: url(../fonts/ptsans.woff2) format("woff2"),
-   url(../fonts/ptsans.woff) format("woff");
+    url(../fonts/ptsans.woff) format("woff");
 }
 
 @font-face {
@@ -54,7 +54,7 @@ a {
   font-weight: 700;
   font-display: swap;
   src: url(../fonts/ptsansbold.woff2) format("woff2"),
-   url(../fonts/ptsansbold.woff) format("woff");
+    url(../fonts/ptsansbold.woff) format("woff");
 }
 
 .visually-hidden {
@@ -229,6 +229,8 @@ a {
 .item-up {
   font-size: 18px;
   list-style: none;
+  color: #f1f5f7;
+
 }
 
 .item-down {
@@ -345,4 +347,12 @@ a {
 .perforator-decryption {
   font-size: 13px;
   font-family: "PT Sans", Arial, sans-serif;
+}
+
+.footer {
+  background-color: #32425c;
+}
+
+.footer-down{
+  background-color: #293449;
 }
