--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Cuprum", Arial, sans-serif;
+  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
   background-color: #f4f7f9;
@@ -24,7 +24,7 @@ html {
 }
 
 @font-face {
-  font-family: "Cuprum", Arial, sans-serif;
+  font-family: "Cuprum";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -33,7 +33,7 @@ html {
 }
 
 @font-face {
-  font-family: "Cuprum", Arial, sans-serif;
+  font-family: "Cuprum";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
@@ -42,7 +42,7 @@ html {
 }
 
 @font-face {
-  font-family: "Cuprum", Arial, sans-serif;
+  font-family: "Cuprum";
   font-style: italic;
   font-weight: 400;
   font-display: swap;
@@ -51,7 +51,7 @@ html {
 }
 
 @font-face {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -60,7 +60,7 @@ html {
 }
 
 @font-face {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
@@ -125,7 +125,7 @@ html {
 
 .signature-item {
   margin-left: 20px;
-  }
+}
 
 .signature-yellow {
   width: 300px;
@@ -199,43 +199,42 @@ html {
   margin-left: 24px;
 
 }
-.slider-text h4{
- font-size: 36px;
- text-transform: uppercase;
- margin: 0;
+
+.slider-text h4 {
+  font-size: 36px;
+  text-transform: uppercase;
+  margin: 0;
 }
-.slider-text p{
+
+.slider-text p {
   margin-top: 25px;
- }
+}
 
 .slider-link {
-text-align: center;
+  text-align: center;
 }
 
 
 .benefits-up {
-  display:  flex;
+  display: flex;
   width: 940px;
   margin-bottom: 20px;
   height: 123px;
 }
 
 .benefits-down {
-  display:  flex;
+  display: flex;
 }
 
-.benefits-box {
-  background-color: blue;
-}
 
 .benefits {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .item-headline {
-  font-family: "PTSans", Arial, sans-serif;
+  font-family: "PTSans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 700;
 }
@@ -246,7 +245,7 @@ text-align: center;
 }
 
 .price-discount {
-  font-family: "PTSans", Arial, sans-serif;
+  font-family: "PTSans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 700;
   text-decoration: line-through;
@@ -260,10 +259,13 @@ text-align: center;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: 400;
+  margin-bottom: 38px;
 }
 
 .text-efforts {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
+  width: 398px;
+  margin-bottom: 74px;
 }
 
 .button-service {
@@ -272,7 +274,9 @@ text-align: center;
 
 
 .text-delivery {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  width: 275px;
 }
 
 .company-headline {
@@ -298,6 +302,7 @@ text-align: center;
   font-size: 36px;
   text-transform: uppercase;
   font-weight: 400;
+  margin-top: 0;
 }
 
 .item-up {
@@ -346,18 +351,31 @@ text-align: center;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: 400;
+  color: #32425c;
+  margin-bottom: 54px;
 }
 
-.text-sorting {
-  text-transform: uppercase;
-  font-family: "PT Sans", Arial, sans-serif;
+.sorting {
+width: 700px;
+min-height: 38px;
 }
 
-.sortin-item {
+
+.sorting-list {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  padding-left: 0;
+}
+
+.sorting-item {
   list-style: none;
   text-transform: uppercase;
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
+  white-space: nowrap;
 }
+
+
 
 .button-prise {
   color: #ee3643;
@@ -415,7 +433,7 @@ text-align: center;
 
 .perforator-decryption {
   font-size: 13px;
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .footer {
@@ -426,65 +444,54 @@ text-align: center;
   background-color: #293449;
 }
 
-.main-header {
-  min-height: 320px;
-  background-color: #ee3643;
-  padding-right: 10px;
-  padding-left: 10px;
-}
 
 
 .header-wrapper {
   min-height: 42px;
   background-color: #293449;
   width: 100%;
-  padding-right: 10px;
-  padding-left: 10px;
 }
 
 .header-box {
   min-height: 42px;
-  width: 940px;
+  width: 960px;
   display: flex;
   background-color: #dc91d8;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 0 10px;
 }
 
 .header-middle {
   min-height: 158px;
-  width: 940px;
+  width: 960px;
   background-color: #8ed78f;
   display: flex;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 0 10px;
 }
 
 .main-nav {
   min-height: 60px;
-  width: 940px;
+  width: 960px;
   display: flex;
   flex-direction: row;
   background-color: #3bbce3;
   margin-bottom: 119px;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 0 10px;
 }
 
-.popular-box {
+.popular-wrapper {
   display: flex;
-  width: 940px;
+  width: 960px;
   min-height: 89px;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+ padding: 0 10px;
   margin-bottom: 20px;
 }
 
@@ -516,26 +523,34 @@ text-align: center;
   border: solid 1px #e5e5e5;
 }
 
-.arcticle:last-child {
+.arcticle-wrapper .arcticle:last-child {
   margin-right: 0px;
 }
 
-.arcticle-box {
-  width: 940px;
+.arcticle-wrapper {
+  width: 960px;
   min-height: 318px;
   display: flex;
   flex-direction: row;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.perforator-catalog article:nth-child(3n) {
+  margin-right: 0;
+}
+
+.perforator-catalog article{
+  margin-bottom: 20px;
 }
 
 .headline-box {
   display: flex;
-  width: 940px;
+  width: 960px;
   min-height: 89px;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  padding: 0 10px;
   margin-top: 21px;
 }
 
@@ -561,23 +576,23 @@ text-align: center;
   font-weight: 400;
 }
 
-.manufacturers-box {
+.manufacturers-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 940px;
+  width: 960px;
   min-height: 310px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 85px;
   margin-top: 20px;
+  padding: 0 10px;
 }
 
 .manufacturers-item {
   width: 220px;
   height: 145px;
   border: solid 1px #e5e5e5;
-  display: block;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -601,38 +616,27 @@ text-align: center;
   list-style: none;
 }
 
-.service-box {
-  min-height: 183px;
-  display: flex;
-}
-
-.service-flex {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-  min-height: 183px;
-  margin-right: 80px;
-  margin: 0;
-}
-
-
 .service {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
-.service-flex ul {
-padding: 0;
+.service-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .About-flex {
-display: flex;
-flex-direction: row;
-width: 940px;
-margin-left: auto;
-margin-right: auto;
-margin-bottom: 86px;
+  display: flex;
+  flex-direction: row;
+  width: 960px;
+  margin: 0 auto;
+  margin-bottom: 86px;
+  padding: 0 10px;
 }
 
 .About-us {
@@ -645,28 +649,29 @@ margin-bottom: 86px;
 }
 
 .product-text {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   margin-bottom: 23px;
 }
 
 .transport-text {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   text-overflow: clip;
   width: 450px;
   margin-bottom: 23px;
 }
+
 .button-details {
-width: 220px;
-height: 38px;
-background-color: #ee3643;
-border-radius: 5px;
-display: block;
-text-align: center;
-padding-top: 7px;
-text-transform: uppercase;
-margin-top: 37px;
+  width: 220px;
+  height: 38px;
+  background-color: #ee3643;
+  border-radius: 5px;
+  display: block;
+  text-align: center;
+  padding-top: 7px;
+  text-transform: uppercase;
+  margin-top: 37px;
 }
 
 .text-office {
@@ -675,22 +680,23 @@ margin-top: 37px;
 }
 
 .button-lost {
-width: 300px;
-height: 38px;
-background-color: #ee3643;
-border-radius: 5px;
-display: block;
-text-align: center;
-padding-top: 7px;
-text-transform: uppercase;
-margin-top: 46px;
+  width: 300px;
+  height: 38px;
+  background-color: #ee3643;
+  border-radius: 5px;
+  display: block;
+  text-align: center;
+  padding-top: 7px;
+  text-transform: uppercase;
+  margin-top: 46px;
 }
 
 .footer-up {
-  width: 322px;
+  width: 960px;
   height: 193px;
   display: flex;
-
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .footer-logo {
@@ -707,4 +713,150 @@ margin-top: 46px;
 
 .footer-nav {
   flex-direction: row;
+}
+
+.footer-down {
+  width: 960px;
+  height: 193px;
+  display: flex;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.service-list {
+  list-style: none;
+  padding: 0;
+}
+
+.service-buttons {
+  padding: 0;
+  width: 240px;
+  margin-right: 80px;
+}
+
+.select-box {
+  width: 220px;
+  margin: 0;
+}
+
+.perforator-catalog {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 700px;
+}
+
+.catalog-wrapper {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.sorting-wrapper {
+  width: 960px;
+  margin: 0 auto 21px auto;
+  padding: 0 10px;
+
+}
+
+.sorting-item p{
+  margin: 0;
+}
+
+.filter-text {
+  margin-left: 18px;
+  margin-right: 188px;
+}
+
+.sorting-text {
+  margin-right: 139px;
+}
+
+.prise-text {
+  margin-right: 71px;
+}
+
+.type-text {
+  margin-right: 65px;
+}
+
+.order-list {
+  list-style: none;
+}
+
+.content-item {
+  color: #000000;
+}
+
+.page-wrapper {
+width: 960px;
+padding: 0 10px;
+margin: 0 auto;
+display: flex;
+flex-direction: row;
+}
+
+.content-list {
+  list-style: none;
+  padding: 0;
+  min-height: 30px;
+}
+
+.list-wrapper {
+  width: 960px;
+  margin: 0 auto;
+  padding:  0 10px;
+}
+
+.page-number {
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.page-item {
+  margin-right: 10px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+    justify-content: center;
+}
+
+.page-list{
+display: flex;
+flex-direction: row;
+padding: 0;
+margin-left: 241px;
+margin-bottom: 127px;
+}
+
+.page-item:first-child {
+  background-color: #ee3643;
+}
+
+.page-first {
+  color: #ffffff;
+}
+
+.perforator-info {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+
+}
+
+.footer-up {
+  margin-top: 73px;
+}
+
+.user-name {
+  font-size: 21px;
+  color: #000000;
+}
+
+.user-item {
+  color: #32425c;
+  text-decoration: underline;
 }
