--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,11 @@ html {
 
 .hedline-box {
   width: 198px;
-    padding: 2px 50px 0 52px;
-    color: #ee3643;
-    font-size: 16px;
-    font-style: italic;
-    line-height: 23px;
+  padding: 2px 50px 0 52px;
+  color: #ee3643;
+  font-size: 16px;
+  font-style: italic;
+  line-height: 23px;
 }
 
 .contacts-box {
@@ -96,25 +96,25 @@ html {
 
 .telephone {
   width: 145px;
-    font-size: 21px;
-    line-height: 18px;
-    color: #e9292a;
-    padding-inline-start: 0;
-    padding-left: 50px;
+  font-size: 21px;
+  line-height: 18px;
+  color: #e9292a;
+  padding-inline-start: 0;
+  padding-left: 50px;
 }
 
 .user-list {
   width: 300px;
-    height: 45px;
-    list-style: none;
-    padding-left: 0;
-    display: flex;
-    flex-direction: row;
+  height: 45px;
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: row;
 }
 
 .user-box {
-width: 281px;
-padding-top: 60px;
+  width: 281px;
+  padding-top: 60px;
 }
 
 .user-item {
@@ -147,30 +147,30 @@ padding-top: 60px;
 
 .search-field {
   width: 270px;
-    border: none;
-    padding: 12px 0 12px 50px;
-    font-size: 17px;
-    line-height: 18px;
-    cursor: pointer;
-    color: #fff;
-    background-color: #293449;
+  border: none;
+  padding: 12px 0 12px 50px;
+  font-size: 17px;
+  line-height: 18px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #293449;
 }
 
 .button-bookmark {
   width: 105px;
-    padding: 12px 0 12px 45px;
-    font-size: 17px;
-    line-height: 18px;
-    text-align: center;
+  padding: 12px 0 12px 45px;
+  font-size: 17px;
+  line-height: 18px;
+  text-align: center;
 }
 
 .button-basket {
   position: relative;
-    width: 100px;
-    padding: 12px 0 12px 50px;
-    font-size: 17px;
-    line-height: 18px;
-    text-align: center;
+  width: 100px;
+  padding: 12px 0 12px 50px;
+  font-size: 17px;
+  line-height: 18px;
+  text-align: center;
 }
 
 .button-checkout {
@@ -186,22 +186,48 @@ padding-top: 60px;
   font-size: 24px;
   font-weight: 700;
   color: #ffffff;
-  margin-top: 0;
+  margin: 0px;
+  margin-bottom: 15px;
 }
 
-.signature-down {
+.signature-first {
+  background-color: #e5ac40;
+}
+
+.signature-second {
+  background-color: #35a9cc;
+}
+
+.signature-third {
+  background-color: #c682c2;
+}
+
+.signature-fourth {
+  background-color: #80c180;
+}
+
+.signature-fifth {
+  background-color: #e5ac40;
+}
+
+
+.signature-button {
   display: block;
-    width: 90px;
-    padding: 9px 23px;
-    margin-left: 25px;
-    margin-bottom: 19px;
-    border-radius: 3px;
-    text-align: center;
-    font-size: 14px;
+  width: 135px;
+  padding: 9px 23px;
+  border-radius: 3px;
+  text-align: center;
+  line-height: 18px;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  white-space: nowrap;
 }
 
 .signature-item {
   margin-left: 20px;
+  padding: 26px 43px 22px 25px;
 }
 
 .signature-yellow {
@@ -311,21 +337,46 @@ padding-top: 60px;
 }
 
 .item-headline {
+  display: block;
+  width: 183px;
   font-family: "PTSans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 700;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 18px;
+
+}
+
+.prise-wrapper {
+  width: 141px;
+  min-height: 38px;
+  background-color: #ee3643;
+  border-radius: 3px;
+}
+
+.item-img {
+  margin-bottom: 12px;
 }
 
 .price {
   font-size: 17px;
   font-weight: 700;
+  font-family: "PTSans", "Arial", sans-serif;
+  margin: 0;
+  color: #ffffff;
 }
+
 
 .price-discount {
   font-family: "PTSans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 700;
   text-decoration: line-through;
+  color: #a9a9a9;
+  margin: 0px;
+  margin-bottom: 13px;
+
 }
 
 .button-popular {
@@ -373,6 +424,8 @@ padding-top: 60px;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: 400;
+
+
 }
 
 .delivery-headline {
@@ -380,7 +433,17 @@ padding-top: 60px;
   text-transform: uppercase;
   font-weight: 400;
   margin-top: 0;
+  color: #32425c;
 }
+
+.service-png::after{
+  content: "";
+  position: relative;
+  left: 50px;
+  background-image: url(../img/delivery.png);
+  background-repeat: no-repeat;
+}
+
 
 .item-up {
   font-size: 18px;
@@ -395,8 +458,26 @@ padding-top: 60px;
   color: #ffd180;
 }
 
+.feedback-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 284px;
+
+}
+
 .copyright {
-  font-size: 16px
+  width: 228px;
+  font-size: 16px;
+  color: #ffffff;
+  margin: 0;
+  line-height: 18px;
+}
+
+.developed-text {
+  min-height: 34px;
+  font-size: 16px;
+  color: #f1f5f7;
+  margin: 0;
 }
 
 .social-item {
@@ -513,15 +594,55 @@ padding-top: 60px;
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.footer-address {
+  width: 322px;
+  font-size: 18px;
+  color: #f3f7f9;
+  font-style: normal;
+  margin-top: 32px;
+}
+
+.footer-title {
+ width: 322px;
+}
+
+.footer-list {
+display: flex;
+flex-direction:  row;
+margin-bottom: 40px;
+list-style: none;
+padding: 0;
+margin: 0 0 34px 0;
+justify-content: flex-end;
+}
+
+.footer-nav {
+  padding-left: 68px;
+  padding-top: 37px;
+  width: 638px;
+}
+
+.footer-item {
+  padding: 0 30px;
+}
+
+.footer-item:first-child {
+  padding-left: 0;
+}
+
+.footer-item:last-child{
+  padding-right: 0;
+}
+
+
 .footer {
   background-color: #32425c;
 }
 
-.footer-down {
+.down-wrapper {
+  width: 100%;
   background-color: #293449;
-}
-
-
+  }
 
 .header-wrapper {
   height: 42px;
@@ -567,22 +688,22 @@ padding-top: 60px;
 
 .nav-list {
   padding: 0;
-    margin: 0;
-    font-size: 0;
-    list-style: none;
-    margin-top: 40px;
-    padding-left: 26px;
-    background-color: #32425c;
-    border-bottom: 5px solid #293449;
+  margin: 0;
+  font-size: 0;
+  list-style: none;
+  margin-top: 40px;
+  padding-left: 26px;
+  background-color: #32425c;
+  border-bottom: 5px solid #293449;
 }
 
 .nav-link {
   display: block;
-    padding-top: 19px;
-    padding-bottom: 14px;
-    padding-right: 32px;
-    padding-left: 28px;
-    color: white;
+  padding-top: 19px;
+  padding-bottom: 14px;
+  padding-right: 32px;
+  padding-left: 28px;
+  color: white;
 }
 
 .popular-wrapper {
@@ -621,7 +742,15 @@ padding-top: 60px;
   min-height: 318px;
   margin-right: 20px;
   border: solid 1px #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-bottom: 21px;
+
 }
+
+
 
 .arcticle-wrapper .arcticle:last-child {
   margin-right: 0px;
@@ -800,13 +929,15 @@ padding-top: 60px;
 
 .logo {
   position: relative;
-    width: 220px;
-    font-size: 24px;
-    text-align: center;
-    background-color: #ee3643;
-    text-transform: uppercase;
-    padding: 10px 0 8px 0;
+  width: 220px;
+  font-size: 24px;
+  text-align: center;
+  background-color: #ee3643;
+  text-transform: uppercase;
+  padding: 10px 0 8px 0;
 }
+
+
 
 
 .logo:after {
@@ -821,21 +952,35 @@ padding-top: 60px;
 
 .form-search {
   display: block;
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .footer-logo {
+  position: relative;
   width: 220px;
-  height: 68px;
+  height: 64px;
   background-color: #ee3643;
   display: block;
+  text-transform: uppercase;
+  font-size: 30px;
+  padding: 20px 41px 21px 41px;
 }
 
-.address {
+.footer-logo:after {
+  position: absolute;;
+  content: '';
+  left: 0;
+  top: 64px;
+  width: 220px;
+  height: 4px;
+  background: #b52933;
+}
+
+.addres {
   font-size: 14px;
-    line-height: 24px;
-    padding: 4px 0 0 10px;
-    color: #32425c;
+  line-height: 24px;
+  padding: 4px 0 0 10px;
+  color: #32425c;
 }
 
 .footer-nav {
@@ -848,6 +993,22 @@ padding-top: 60px;
   display: flex;
   margin: 0 auto;
   padding: 0 10px;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #293449;
+  padding-top: 36px;
+}
+
+.social-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.social-item{
+  margin-right: 3px;
 }
 
 .service-list {
@@ -982,4 +1143,3 @@ padding-top: 60px;
   font-size: 21px;
   color: #000000;
 }
-
